# pomato

./: Cargo.toml  README.md
ripi/Issue/create_ascii_art_function/: description.md
ripi/Issue/create_basic_app_structure/: description.md
ripi/Issue/create_cli_structure/: description.md
ripi/Issue/create_timer_auxiliary_functions/: description.md
ripi/Issue/create_utils_functions/: description.md
ripi/Issue/fix_playing_sound/: description.md
ripi/Issue/write_readme_docs/: description.md
src/: app.rs  ascii_art.rs  cli.rs  main.rs  timer.rs  utils.rs
